# primeval

./: .gitignore  LICENSE  README.md  assay_table.csv  conda-lock.yml  environment.yaml  pyproject.toml
assay-design/: README.md  cli.py  extract_proteins.py  parse_group_specific_orthologs.py  run_pipeline.py
assay-design/example/: README.md  example_gene_presence_absence.csv  gene_data.csv  representatives.tsv  run_example.sh
assay-design/example/isolate_groups/: Vmed_intermediate-avirulent.txt  Vmed_pathogenic.txt  Vmed_protective.txt
config/: config.yaml  ncbi_credentials.example.sh
primeval/: cli.py  download_cli.py  rundir.py
scripts/download/: download_assemblies.sh  parse_metadata.py
test_data/: accessions.txt  download_test_data.sh
tests/: test_assay_design_cli.py  test_assay_design_example.py  test_cli_cmd.py  test_cli_main.py  test_download_cli.py  test_extract_proteins.py  test_prepare_oligos.py  test_run_ispcr.py  test_rundir.py  test_summarize.py
workflow/: Snakefile
workflow/profiles/local/: config.yaml
workflow/profiles/slurm/: config.yaml
workflow/rules/: blast.smk  ispcr.smk  prepare.smk  report.smk
workflow/scripts/: prepare_oligos.py  run_ispcr.py  summarize.py
