[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "primeval"
version = "0.1.0"
description = "In silico PCR assay validation pipeline"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
primeval = "primeval.cli:main"

[tool.setuptools]
packages = ["primeval"]
