[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "primeval"
version = "0.1.0"
description = "In silico PCR assay validation pipeline"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
primeval = "primeval.cli:main"
assay-design = "assay_design.cli:main"

[tool.setuptools]
packages = ["primeval", "assay_design"]

[tool.setuptools.package-dir]
assay_design = "assay-design"
